[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4"
anyhow = "1"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
jsonwebtoken = {version = "10", features = ["rust_crypto"]}
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["rust_decimal", "mysql", "runtime-tokio", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.2", features = ["full"] }
rand = "0.9"
corepc-types = { git = "https://github.com/rust-bitcoin/corepc", package = "corepc-types" }
bitcoin = { version = "0.32", features = ["rand-std"] }
mnemonic = "1.1.1"
dotenv = "0.15"
bip39 = "2.2.2"
argon2 = { version = "0.5", features = ["password-hash"] }
aes-gcm = { version = "0.10", features = ["alloc"] }
hex = "0.4"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
mime = "0.3"
futures = "0.3"
futures-util = "0.3"
sanitize-filename = "0.6"
infer = "0.19"
zeroize = "1"
